# newsletter-api

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-00b63beccf44a35b94f7490e19f05dfd50107124c98dd8ac89913a1f4ae324cd.json  query-90aa32fdc83f0243d02d2e6bd66231faa726883167198bc2c1ba125400c46c3d.json  query-e0e5bd07cd8943a8ffc18f65c6627fd19599596e49eb0daf6778f8aaf9c9d454.json
configuration/: base.yaml
migrations/: 20241113141500_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs
src/routes/admin/password/: change_password.html  get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
