[package]
name = "newsletter-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["clock"], default-features = false }
config = "0.14.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4", "v7"] }
validator = "0.18.1"

[dev-dependencies]
claims = "0.7.1"
fake = "3.0.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde_json = "1.0.132"
wiremock = "0.6.2"
