[package]
name = "newsletter-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["clock"], default-features = false }
config = "0.14.1"
hex = "0.4.3"
hmac = "0.12.1"
htmlescape = "0.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4", "v7"] }
validator = "0.19.0"

[dev-dependencies]
claims = "0.8.0"
fake = "3.0.1"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde_json = "1.0.133"
wiremock = "0.6.2"
