[package]
name = "newsletter-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

[dependencies]
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
actix-web = "4.9.0"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["clock"], default-features = false }
config = "0.15.7"
htmlescape = "0.3.1"
rand = { version = "0.9.0", features = ["std_rng"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.13.1", features = ["v4", "v7"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "3.1.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.0"
reqwest = "0.12.12"
serde_json = "1.0.138"
wiremock = "0.6.2"
